--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 Framework PHP para el desarrollo de aplicaciones web usando MVC.
 
 Incluye:
-- Login seguro premontado
+- Login seguro
+- Roles y privilegios
 - Librerias jQuery
 - Librerias SMTP
 
